k8s/bash-dev-kubernetes.yml
##@@@123
# Description: kubernetes部署文件，不同项目只用修改 distribution 替换为项目名
# @Date: 2019-04-23 16:14
# @Author: jim
##
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: base
  namespace: #NS
spec:
  rules:
  - host: base.top.mw
    http:
      paths:
      - path: /
        backend:
          serviceName: base
          servicePort: 8080
---
kind: Service
metadata:
  name: base
  namespace: #NS
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: base
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: base
  template:
    metadata:
      labels:
        app: base
    spec:
      nodeSelector:
        kubernetes.io/hostname: 192.168.1.200
      containers:
        - name: base
          imagePullPolicy: IfNotPresent
          image: #IMAGE
          resources:
            requests:
              memory: "2Gi"
            limits:
              memory: "2Gi"
          livenessProbe:
            failureThreshold: 8
            httpGet:
              path: /k8s/health
              port: 8080
              httpHeaders:
                - name: X-Custom-Header
                  value: jim
            initialDelaySeconds: 60
            timeoutSeconds: 3
            periodSeconds: 5
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-logs
              mountPath: /logs
          args:
            - --spring.cloud.consul.host=consul.top.mw
            - --spring.cloud.consul.port=80
            - --spring.profiles.active=dev
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:6.3.2
          imagePullPolicy: IfNotPresent
          args: [
            "-c", "/etc/filebeat.yml",
            "-e",
          ]
          securityContext:
            runAsUser: 0
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /etc/filebeat.yml
              readOnly: true
              subPath: filebeat.yml
            - name: inputs
              mountPath: /usr/share/filebeat/inputs.d/
              readOnly: true
            - name: app-logs
              mountPath: /logs
      volumes:
        - name: app-logs
          emptyDir: {}
        - name: config
          configMap:
            defaultMode: 0600
            name: base-filebeat-config
        - name: inputs
          configMap:
            defaultMode: 0600
            name: base-filebeat-inputs
